syntax = "proto3";

package api.user.v1;

import "api/types/types.proto";
//import "validate/validate.proto";

option go_package = "user/api/user/v1;v1";

service teacher {
  // create teacher
  rpc Create(CreateTeacherRequest) returns (CreateTeacherReply) {}

  // delete teacher by id
  rpc DeleteByID(DeleteTeacherByIDRequest) returns (DeleteTeacherByIDReply) {}

  // delete teacher by batch id
  rpc DeleteByIDs(DeleteTeacherByIDsRequest) returns (DeleteTeacherByIDsReply) {}

  // update teacher by id
  rpc UpdateByID(UpdateTeacherByIDRequest) returns (UpdateTeacherByIDReply) {}

  // get teacher by id
  rpc GetByID(GetTeacherByIDRequest) returns (GetTeacherByIDReply) {}

  // get teacher by condition
  rpc GetByCondition(GetTeacherByConditionRequest) returns (GetTeacherByConditionReply) {}

  // list of teacher by batch id
  rpc ListByIDs(ListTeacherByIDsRequest) returns (ListTeacherByIDsReply) {}

  // list of teacher by query parameters
  rpc List(ListTeacherRequest) returns (ListTeacherReply) {}
}

// Some notes on defining fields under message:
// Fill in the validate rules https://github.com/envoyproxy/protoc-gen-validate#constraint-rules

message CreateTeacherRequest {
	string name = 1;  // 用户名
	string password = 2;  // 密码
	string email = 3;  // 邮件
	string phone = 4;  // 手机号码
	string avatar = 5;  // 头像
	int32 gender = 6;  // 性别，1:男，2:女，其他值:未知
	int32 age = 7;  // 年龄
	string birthday = 8;  // 出生日期
	string schoolName = 9;  // 学校名称
	string college = 10;  // 学院
	string title = 11;  // 职称
	string profile = 12;  // 个人简介
}

message CreateTeacherReply {
  uint64   id =1;
}

message DeleteTeacherByIDRequest {
  uint64   id =1;
}

message DeleteTeacherByIDReply {

}

message DeleteTeacherByIDsRequest {
  repeated uint64 ids = 1;
}

message DeleteTeacherByIDsReply {

}

message UpdateTeacherByIDRequest {
	uint64 id = 1; 
	string name = 2;  // 用户名
	string password = 3;  // 密码
	string email = 4;  // 邮件
	string phone = 5;  // 手机号码
	string avatar = 6;  // 头像
	int32 gender = 7;  // 性别，1:男，2:女，其他值:未知
	int32 age = 8;  // 年龄
	string birthday = 9;  // 出生日期
	string schoolName = 10;  // 学校名称
	string college = 11;  // 学院
	string title = 12;  // 职称
	string profile = 13;  // 个人简介
}

message UpdateTeacherByIDReply {

}

message Teacher {
	uint64 id = 1; 
	int64 createdAt = 2; 
	int64 updatedAt = 3; 
	string name = 4;  // 用户名
	string password = 5;  // 密码
	string email = 6;  // 邮件
	string phone = 7;  // 手机号码
	string avatar = 8;  // 头像
	int32 gender = 9;  // 性别，1:男，2:女，其他值:未知
	int32 age = 10;  // 年龄
	string birthday = 11;  // 出生日期
	string schoolName = 12;  // 学校名称
	string college = 13;  // 学院
	string title = 14;  // 职称
	string profile = 15;  // 个人简介
}

message GetTeacherByIDRequest {
  uint64   id =1;
}

message GetTeacherByIDReply {
  Teacher teacher = 1;
}

message GetTeacherByConditionRequest {
  types.Conditions conditions = 1;
}

message GetTeacherByConditionReply {
  Teacher teacher = 1;
}

message ListTeacherByIDsRequest {
  repeated uint64 ids = 1;
}

message ListTeacherByIDsReply {
  repeated Teacher teachers = 1;
}

message ListTeacherRequest {
  types.Params params = 1;
}

message ListTeacherReply {
  int64 total =1;
  repeated Teacher teachers = 2;
}


